--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.6.2",
     "react": "18.2.0",
     "react-native": "0.72.4",
+    "react-native-date-picker": "^4.3.3",
     "react-native-gesture-handler": "^2.13.4",
     "react-native-safe-area-context": "^4.7.2",
     "react-native-screens": "^3.25.0",
