--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/native-stack": "^6.9.13",
     "@react-navigation/stack": "6.2.1",
     "axios": "^1.6.2",
+    "base-64": "^1.0.0",
     "moment": "^2.30.1",
     "react": "18.2.0",
     "react-native": "0.72.4",
