--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "react": "18.2.0",
     "react-native": "0.72.4",
     "react-native-date-picker": "^4.3.3",
+    "react-native-flash-message": "^0.4.2",
     "react-native-gesture-handler": "^2.13.4",
+    "react-native-image-helper": "^0.0.4",
     "react-native-safe-area-context": "^4.7.2",
     "react-native-screens": "^3.25.0",
     "react-native-vector-icons": "^10.0.1"
